# vibecraft

./: .gitignore  AI_TODO.txt  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  LICENSE.md  README.md  Shaders.vcxproj  Shaders.vcxproj.filters  Vibecraft.vcxproj  Vibecraft.vcxproj.filters  VibecraftProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
shaders/: break_overlay.frag  break_overlay.vert  crosshair.frag  crosshair.frag.spv  crosshair.vert  debug.frag  debug.vert  debug.vert.spv  item.frag  item.vert  outline.frag  outline.vert  player.frag  player.vert  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader_simple.frag  vert.spv  water.frag  water.frag.spv  water.vert  water.vert.spv
shaders/raytracing/: shadow.rchit  shadow.rchit.spv  shadow.rgen  shadow.rgen.spv  shadow.rmiss  shadow.rmiss.spv  shadow_occlusion.rahit  shadow_occlusion.rmiss  shadow_primary.rmiss  shadow_shadow.rahit
shaders/sky/: sky.frag  sky.frag.spv  sky.vert  sky.vert.spv
src/: Block.cpp  Block.h  BlockAtlas.h  BlockIds.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  DebugController.cpp  DebugController.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Globals.cpp  Globals.h  Item.cpp  Item.h  Player.cpp  Player.h  Settings.h  ThreadPool.h  UploadJob.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanWrappers.h  VulkanWrappersDeferredFree.cpp  Window.cpp  Window.h  main.cpp
src/generation/: Biome.h  DesertBiome.cpp  DesertBiome.h  OceanBiome.cpp  OceanBiome.h  PlainsBiome.cpp  PlainsBiome.h  TerrainGenerator.cpp  TerrainGenerator.h
src/math/: AABB.h  Frustum.cpp  Frustum.h  Ivec3Less.h
src/renderer/: DebugOverlay.cpp  DebugOverlay.h  PlayerModel.cpp  PlayerModel.h  RayTracing.h  RayTracingPushConstants.h  RendererConfig.h  UniformBufferObject.h  Vertex.cpp  Vertex.h
src/renderer/command/: CommandManager.cpp  CommandManager.h  SyncPrimitives.cpp  SyncPrimitives.h
src/renderer/core/: DeviceContext.cpp  DeviceContext.h  InstanceContext.cpp  InstanceContext.h
src/renderer/pipeline/: DescriptorLayout.cpp  DescriptorLayout.h  PipelineCache.cpp  PipelineCache.h
src/renderer/resources/: RingStagingArena.cpp  RingStagingArena.h  TextureManager.cpp  TextureManager.h  UploadHelpers.cpp  UploadHelpers.h
src/renderer/swapchain/: SwapChainContext.cpp  SwapChainContext.h
